--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,7 +18,7 @@
 
       <% @books.each do |book| %>
         <tr>
-          <td><p>投稿ユーザー画像：<%= image_tag 'sample-author1.jpg' %></p></td>
+          <td><p>投稿ユーザー画像：<%= image_tag book.user.get_profile_image %></p></td>
           <td><a class ="link" href="<%= book_path(book.id) %>"><%= book.title%></a></td>
           <td><%= book.body%></td>
 
@@ -29,52 +29,4 @@
 
   </table>
 
-  <h2>
-  New book
-  </h2>
-
-  <%= form_with model: @book, url:'/books', method: :post do |f| %>
-
-  <% if @book.errors.any? %>
-  <div class="error-box">
-    <% if @book.errors.count==2 %>
-
-      <h2 class = "errors">
-        2 errors prohibited this book from being saved:
-      </h2>
-    <% end %>
-
-    <% if @book.errors.count==1 %>
-      <h2 class = "error">
-      1 error prohibited this book from being saved:
-      </h2>
-    <% end %>
-
-      <ul>
-        <% @book.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="input">
-   <label>Title</label>
-    <br>
-    <%= f.text_field :title %>
-
-  </div>
-
-  <div class="input">
-
-   <label>Body</label>
-   <br>
-   <%= f.text_area :body %>
-
-  </div>
-
-  <div class="submit">
-    <%= f.submit 'Create Book' %>
-  </div>
-
-  <% end %>
+<%= render 'list', books: @books %>
