--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,11 @@
-<div>
-  <h3><%= @user.name %></h3>
-  <%= image_tag @user.get_profile_image %>
-  <p><%= link_to "プロフィール編集", edit_user_path(@user.id) %></p>
-  
-</div>
-
+<%= render 'books/list', books: @books %>
 <!-- ユーザーの投稿一覧 -->
 
-<% @books.each do |post_image| %>
+<% @books.each do |book| %>
 <div>
-  <%= link_to post_image_path(post_image.id) do %>
-    <%= image_tag post_image.get_image %>
-  <% end %>
-  <p>投稿ユーザー画像：<%= image_tag @book.user.get_profile_image(100,100) %></p>
-  <p>title：<%= post_image.shop_name %></p>
-  <p>body：<%= post_image.caption %></p>
-  <p>ユーザーネーム：<%= post_image.user.name %></p>
+  <p><%= image_tag book.user.get_profile_image %></p>
+  <a class ="link" href="<%= book_path(book.id) %>"><%= book.title %></a>
+  <p>Opnion：<%= book.body %></p>
+
 </div>
 <% end %>
