--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,45 @@
-<h2>プロフィール編集</h2>
+<div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+  <br>
+<h2>User info</h2>
+
+<% if @user.errors.any? %>
+  <div class="error-box">
+    <% if @user.errors.count==2 %>
+
+      <h2 class = "errors">
+        2 errors prohibited this book from being saved:
+      </h2>
+    <% end %>
+
+    <% if @user.errors.count==1 %>
+      <h2 class = "error">
+      1 error prohibited this book from being saved:
+      </h2>
+    <% end %>
+
+      <ul>
+        <% @user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+<br>
 <%= form_with model: @user do |f| %>
   <label for="inputName">Name</label>
+  <br>
   <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <label for="inputImage">ProfileImage</label>
+  <br>
+  <label for="inputImage">Image</label>
+  <br>
   <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-  <%= f.submit "変更を保存" %>
+  <br>
+  <label for="inputName">Introduction</label>
+  <br>
+  <%= f.text_field :introduction, autofocus: true, id:"inputIntroduction"%>
+  <br>
+  <br>
+  <%= f.submit "Update User" %>
 <% end %>
+</div>
