--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,15 +1,28 @@
+<div class="col-lg-4">
 <div>
-  <h3><%= @user.name %></h3>
-  <%= image_tag @user.get_profile_image %>
-  <p><%= link_to "プロフィール編集", edit_user_path(@user.id) %></p>
+  <h2>User info</h2>
+  <table class='table'>
+
+  <%= image_tag user.get_profile_image %>
+  <tr>
+    <th>name</th>
+    <th><p><%= user.name %></p></th>
+  </tr>
+  <tr>
+    <th>introduction</th>
+    <th><p><%= user.introduction %></p></th>
+  </tr>
+
+  </table>
+<%= link_to edit_user_path(user.id) do %>
+        <i class="fas fa-user-cog"></i>
+  <% end %>
 
 </div>
 
-<h2>
-  New book
-  </h2>
+<h2>New book</h2>
 
-  <%= form_with model: @book, url:'/books', method: :post do |f| %>
+  <%= form_with model: book, url:'/books', method: :post do |f| %>
 
   <div class="input">
    <label>Title</label>
@@ -29,5 +42,6 @@
   <div class="submit">
     <%= f.submit 'Create Book' %>
   </div>
+</div>
 
   <% end %>
