--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,12 +1,4 @@
-<div class="top">
-
-  <h1>
-    Editing Book
-  </h1>
-
-  <%= form_with model: @book, url:book_path(@book.id), method: :patch do |f| %>
-
-  <% if @book.errors.any? %>
+<% if @book.errors.any? %>
   <div class="error-box">
     <% if @book.errors.count==2 %>
 
@@ -28,6 +20,14 @@
       </ul>
     </div>
   <% end %>
+<div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+<div class="top">
+
+  <h1>
+    Editing Book
+  </h1>
+
+  <%= form_with model: @book, url:book_path(@book.id), method: :patch do |f| %>
 
    <div class="input">
    <label>Title</label>
@@ -50,4 +50,5 @@
     <a class ="link" href="<%= book_path(@book.id) %>">Show</a> |
     <a class ="link" href="<%='/books' %>">Back</a>
 
+</div>
 </div>
