--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,6 @@
-<h1>About</h1>
+<script src="https://kit.fontawesome.com/56ef9c2cae.js" crossorigin="anonymous"></script>
+<div class='container'>
+  <div class='row'>
+    <h1 class="px-3 mx-auto">Welcome to <i class="fas fa-book"></i><strong>Bookers</strong>!</h1>
+  </div>
+</div>
