--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,46 +1,96 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://kit.fontawesome.com/56ef9c2cae.js" crossorigin="anonymous"></script>
     <title>Bookers2</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <header>
-      <% if user_signed_in? %>
-       <li>
-      <%= link_to 'Home', user_path(current_user.id) %>
-      </li>
-      <li>
-          <%= link_to "Users", users_path %>
-        </li>
-        <li>
-          <%= link_to "Books", books_path %>
-        </li>
-        <li>
-          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to "Home", root_path %>
-        </li>
-        <li>
-          <%= link_to "About", about_path %>
-        </li>
-        <li>
-          <%= link_to "Sign up", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to "Sign in", new_user_session_path %>
-        </li>
-      <% end %>
+  <body class="d-flex flex-column vh-100">
+    <header class="shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+          <a class="navbar-brand p-3" href="/">Bookers</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+
+            <% if user_signed_in? %>
+            <li class="nav-item">
+              <a class ="link" href="<%= user_path(current_user.id) %>">
+              <i class="fas fa-home"></i> Home
+              </a>
+             <li>
+            <li class="nav-item">
+              <a class ="link" href="<%= users_path %>">
+              <i class="fas fa-users"></i> Users
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class ="link" href="<%= books_path %>">
+              <i class="fas fa-book-open"></i> Books
+              </a>
+            </li>
+            <%= link_to destroy_user_session_path, :method => :delete do %>
+              <i class="fas fa-sign-out-alt"></i> Log out
+            <% end %>
+            
+
+            <% else %>
+            <li class="nav-item">
+              <a class ="link" href="<%= root_path %>">
+              <i class="fas fa-home"></i> Home
+             </a>
+            </li>
+            <li class="nav-item">
+              <a class ="link" href="<%= about_path %>">
+              <i class="fas fa-link"></i> About
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class ="link" href="<%= new_user_registration_path %>">
+              <i class="fas fa-user-plus"></i> Sign up
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class ="link" href="<%= new_user_session_path %>">
+              <i class="fas fa-sign-in-alt"></i> Log in
+             </a>
+            </li>
+            <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
+    <main class="mb-auto">
+
+    <p id="notice">
+        <%= flash[:notice] %>
+    </p>
+
+
 
     <%= yield %>
+    </main>
+
+    <footer class="bg-dark text-white pt-5 pb-4">
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
