--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,32 @@
+<% if @book.errors.any? %>
+  <div class="error-box">
+    <% if @book.errors.count==2 %>
+
+      <h2 class = "errors">
+        2 errors prohibited this book from being saved:
+      </h2>
+    <% end %>
+
+    <% if @book.errors.count==1 %>
+      <h2 class = "error">
+      1 error prohibited this book from being saved:
+      </h2>
+    <% end %>
+
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+<div class="container">
+<div class="row">
+<%= render 'books/list', user: @user, book: @book %>
+<div class="col-lg-8">
 <h1>Users</h1>
 
-  <table>
+  <table class="table table-striped">
 　  <thead>
 　    <tr>
         <th>image</th>
@@ -12,7 +38,7 @@
 
       <% @users.each do |user| %>
         <tr>
-          <td><p>投稿ユーザー画像：<%= image_tag user.get_profile_image %></p></td>
+          <td><p><%= image_tag user.get_profile_image %></p></td>
           <td><%= user.name%></td>
           <td><a class ="link" href="<%= user_path(user.id) %>">show</a></td>
 
@@ -22,3 +48,6 @@
     </tbody>
 
   </table>
+   </div>
+  </div>
+  </div>
