--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,32 @@
-<%= render 'books/list', books: @books %>
-<!-- ユーザーの投稿一覧 -->
 
-<% @books.each do |book| %>
-<div>
-  <p><%= image_tag book.user.get_profile_image %></p>
-  <a class ="link" href="<%= book_path(book.id) %>"><%= book.title %></a>
-  <p>Opnion：<%= book.body %></p>
+<div class="container">
+<div class="row">
+<%= render 'books/list', user: @user, book: @book %>
+<div class="col-lg-8">
+   <h1>Books</h1>
+  <table class="table table-striped">
+　  <thead>
+　    <tr>
+　      <th></th>
+        <th>Title</th>
+        <th>Opinion</th>
+      </tr>
+　  </thead>
 
-</div>
-<% end %>
+　  <tbody>
+
+      <% @books.each do |book| %>
+        <tr>
+          <td><p><%= image_tag book.user.get_profile_image %></p></td>
+          <td><a class ="link" href="<%= book_path(book.id) %>"><%= book.title %></a></td>
+          <td><p>Opnion：<%= book.body %></p></td>
+
+          </tr>
+      <% end %>
+
+    </tbody>
+
+  </table>
+   </div>
+  </div>
+  </div>
