--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -29,7 +29,9 @@
 <div class="container">
 <div class="row">
 <%= render 'list', user: @user, book: @book %>
-<div class="col-lg-8">
+
+<div class='col-md-8 offset-md-1'>
+  <br>
  <h1>Books</h1>
 
   <table class="table table-striped">
