--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,10 +20,12 @@
       </ul>
     </div>
   <% end %>
-<div class="container">
+
+<div class='container px-5 px-sm-0'>
 <div class="row">
 <%= render 'books/list', user: @user, book: @book %>
-<div class="col-lg-8">
+<div class='col-md-8 offset-md-1'>
+  <brs>
 <h1>Users</h1>
 
   <table class="table table-striped">
@@ -31,6 +33,7 @@
 　    <tr>
         <th>image</th>
         <th>name</th>
+        <th colspan="3"></th>
       </tr>
 　  </thead>
 
@@ -40,7 +43,7 @@
         <tr>
           <td><p><%= image_tag user.get_profile_image %></p></td>
           <td><%= user.name%></td>
-          <td><a class ="link" href="<%= user_path(user.id) %>">show</a></td>
+          <td><a class ="link" href="<%= user_path(@user) %>">show</a></td>
 
           </tr>
       <% end %>
