--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
 <div class="row">
-<%= render 'list', user: @user, book: @book %>
+<%= render 'list', user: @user, book: @booknew %>
 <div class='col-md-8 offset-md-1'>
 <br>
 <h1>Book detail<h1>
