--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,7 +25,7 @@
 <div class="row">
 <%= render 'books/list', user: @user, book: @book %>
 <div class='col-md-8 offset-md-1'>
-  <brs>
+  <br>
 <h1>Users</h1>
 
   <table class="table table-striped">
@@ -43,7 +43,7 @@
         <tr>
           <td><p><%= image_tag user.get_profile_image %></p></td>
           <td><%= user.name%></td>
-          <td><a class ="link" href="<%= user_path(@user) %>">show</a></td>
+          <td><%=link_to "Show",user_path(user.id) %></td>
 
           </tr>
       <% end %>
