--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,7 @@
 　      <th></th>
         <th>Title</th>
         <th>Opinion</th>
+        <th></th>
       </tr>
 　  </thead>
 
@@ -19,7 +20,22 @@
           <td><a class ="link" href="<%= user_path(@user.id) %>"><%= image_tag book.user.get_profile_image %></a></td>
           <td><a class ="link" href="<%= book_path(book.id) %>"><%= book.title %></a></td>
           <td><p>Opnion：<%= book.body %></p></td>
-
+           <td>
+        <% if book.favorited_by?(current_user) %>
+        <p>
+        <%= link_to book_favorites_path(book), method: :delete do %>
+        <i class="fas fa-heart"></i><%= book.favorites.count %>
+        <% end %>
+        </p>
+        <% else %>
+        <p>
+        <%= link_to book_favorites_path(book), method: :post do %>
+        <i class="fas fa-heart"></i><%= book.favorites.count %>
+        <% end %>
+        </p>
+        <% end %>
+        </td>
+          <td><p><%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></p></td>
           </tr>
       <% end %>
 
